Deprecated `Integer(int)` (#424)